<resources>
    <string name="application_name">appGlue</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="title_running">Running Services</string>
    <string name="comp_list_new">New</string>
    <string name="comp_title">Compose a service</string>
    <string name="comp_save">Save</string>
    <string name="comp_add">Add Component</string>
    <string name="comp_clear">Clear</string>
    <string name="comp_test">Test</string>
    <string name="save_name">Name:</string>
    <string name="save_description">Description:</string>
    <string name="save_name_default">Enter name here</string>
    <string name="save_description_default">Enter description here</string>
    <string name="component_title_view">View Component</string>
    <string name="component_title_use">Use component</string>
    <string name="simple_use">Use</string>
    <string name="simple_get">Get</string>
    <string name="simple_title_description">Description</string>
    <string name="simple_title_inputs">Inputs and Outputs</string>
    <string name="simple_title_app">App</string>
    <string name="wiring_done">Done</string>
    <string name="param_done">Finished</string>
    <string name="running_info">This is a list of the services that are currently running on your device</string>
    <string-array name="time_array">
        <item>seconds</item>
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>
    <string name="simple_service_description_text">Description text</string>
    <string name="cd_composite_list_more">Click for more</string>
    <string name="comp_list_item_number">#</string>
    <string name="comp_list_item_service_name">Service Name</string>
    <string name="comp_list_item_cd_icon">Launch the service %s</string>
    <string name="cd_running_list_icon">The icon of the running service</string>
    <string name="cd_simple_list_item_icon">The icon of the component</string>
    <string name="cd_simple_icon">The icon of the component</string>
    <string name="service_name">Service Name</string>
    <string name="dev_name">Dev Name</string>
    <string name="app_name">App Name</string>
    <string name="io_name">IO Name</string>
    <string name="io_type">IO Type</string>
    <string name="none">None</string>
    <string name="create_new">Create New</string>
    <string name="view_app">View App</string>
    <string name="launch_app">Launch App</string>
    <string name="examples">Examples</string>
    <string name="component_icon_contdesc">The icon of the component</string>
    <string name="components">Components</string>
    <string name="choose_a_filter_value">Choose a filter value</string>
    <string name="dialog_app_cancel">Cancel</string>
    <string name="dialog_app_positive">Select</string>
    <string name="dialog_filter_positive">Set</string>
    <string name="dialog_filter_neutral">Clear</string>
    <string name="dialog_filter_negative">Cancel</string>
    <string name="dialog_io_positive">Set</string>
    <string name="dialog_io_neutral">Clear</string>
    <string name="dialog_io_negative">Cancel</string>
    <string name="hint_wiring_csname">Enter a name for your Composite</string>
    <string name="param_cancel">I changed my mind..</string>
    <string name="no_examples">No examples available</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="clear_log">Clear log</string>
    <string name="change_view">Change view</string>
    <string name="run">Run</string>
    <string name="schedule">Schedule</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="enter_value">Enter a value</string>
    <string name="share">Share</string>
    <string name="move_left">Move left</string>
    <string name="move_right">Move right</string>
    <string name="remove">Remove</string>
    <string name="how_often">How often would you like the service to run?</string>
    <string name="once_every">Once every..</string>
    <string name="run_now">Run service now?</string>
    <string name="composite_name">Composite Name</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="view_composite">View Composite</string>
    <string name="view_log">View log</string>
    <string name="settings">Settings</string>
    <string name="when_run">When do you want your gluedApp to run?</string>
    <string name="component_name">Component Name</string>
    <string name="empty_log">No log messages yet</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="create_composite">Create new composite</string>
    <string name="loading_spinner">Loading spinner</string>
    <string name="inputs">Inputs</string>
    <string name="inputs_none">No inputs for this component</string>
    <string name="outputs">Outputs</string>
    <string name="outputs_none">No outputs for this component</string>
    <string name="first_component_icon">first component icon</string>
    <string name="finished_story"><![CDATA[I&apos;m done.]]></string>
    <string name="not_finished_story"><![CDATA[Let&apos;s save it and decide what to do next.]]></string>
    <string name="message">Message</string>
    <string name="filter">Filter</string>
    <string name="dont_filter">Don\'t filter</string>
    <string name="story_trigger">When something happens</string>
    <string name="story_trigger_description">When an event happens - you get a SMS, you plug the power in, etc.</string>
    <string name="story_normal">When you say so</string>
    <string name="story_normal_description">When you press go, or you tell it to go at a particular time.</string>
    <string name="set_button">Set button</string>
    <string name="set">Set</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="filter_button">Filter button</string>
    <string name="second_component_icon">Second component icon</string>
    <string name="story_add">Add more things!</string>
    <string name="story_add_description">I want to do more stuff</string>
    <string name="running">Running</string>
    <string name="edit_composition">Edit composition</string>
    <string name="trigger_icon">Trigger icon</string>
    <string name="trigger">Trigger</string>
    <string name="filter_icon">Filter icon</string>
    <string name="no_inputs">NO INPUTS</string>
    <string name="no_outputs">NO OUTPUTS</string>
    <string name="example_icon">Example icon</string>
    <string name="example_image">Example image</string>
    <string name="example_icon2">Example icon 2</string>
    <string name="remove_connection">Remove the connection</string>
    <string name="wiring_switch">Wiring</string>
    <string name="value_current_icon">Something</string>
    <string name="pre_icon">Icon of first component</string>
    <string name="post_icon">Icon of next component</string>
    <string name="title_activity_activity_app_glue">ActivityAppGlue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="page_home">My Glue</string>
    <string name="page_components">Components List</string>
    <string name="page_log">Log</string>
    <string name="page_gplus">G+ login</string>
    <string name="page_settings">Settings</string>
    <string name="page_privacy">Privacy Policy</string>
    <string name="change_view_grid">View as Grid</string>
    <string name="change_view_list">View as List</string>
    <string name="composite_icon">Icon representing the composite</string>
    <string name="wiring_auto">Auto-connect</string>
    <string name="wiring_value_switch">Set Values</string>
    <string name="wiring_wiring_switch">Do Wiring</string>
    <string name="composite_components">Components</string>
    <string name="cd_composite_icon">Composite icon</string>
    <string name="wiring_tab">Wiring</string>
    <string name="filter_tab">Filters</string>
    <string name="value_tab">Values</string>
    <string name="wiring_filter_title">filters</string>
    <string name="wiring_filters_none">No Filters</string>
    <string name="wiring_filter_add">Add</string>
    <string name="cd_filter_add">Add a value for the IO in this filter</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="filter_done">Done</string>
    <string name="no_filters">No filters</string>
    <string name="bullet">\u2022</string>
    <string name="not_equals">\u2260</string>
    <string name="contains_backwards">\u220b</string>
    <string name="no_schedule">No scheduled composites</string>
    <string name="next">Next:</string>
    <string name="every">Every</string>
    <string name="on">on</string>
    <string name="at">at</string>
    <string name="from">from</string>
    <string name="prefs_success">prefs_notifications</string>
    <string name="prefs_fail">prefs_fail</string>
    <string name="prefs_cost">prefs_cost</string>
    <string name="prefs_location">prefs_location</string>
    <string name="prefs_network">prefs_network</string>
    <string name="prefs_storage">prefs_storage</string>
    <string name="privacy_disclaimer_title">Disclaimer</string>
    <string name="privacy_disclaimer_1">Thanks for trying appGlue!</string>
    <string name="privacy_disclaimer_2">appGlue is currently in ALPHA, and is probably full of bugs, apologies for this. If you encounter any, please use the \'Report\' feature on the dialog.</string>
    <string name="privacy_disclaimer_tc">appGlue is provided under the following terms and conditions:</string>
    <string name="privacy_disclaimer_tc1">appGlue is provided \'as is\' and you use it entirely at your own risk</string>
    <string name="privacy_disclaimer_tc2">No warranties are provided as to performance, merchantability, fitness for a particular purpose, or any other warranties whether expressed or implied. This is consumer grade software.</string>
    <string name="privacy_disclaimer_tc3">No oral or written communication from or information provided by the author shall create a warranty</string>
    <string name="privacy_disclaimer_tc4">Under no circumstances shall the author be liable for direct, indirect, special, incidental, or consequential damages resulting from the use, misuse, or inability to use this software.</string>
    <string name="privacy_disclaimer_3">Use of this application implies acceptance of these conditions. If you do not accept, please click the cancel button above and then remove appGlue from your device in the normal way.</string>
    <string name="privacy_disclaimer_4">Additional features are provided to reduce the potential damage you can cause, but they can be altered on the Settings page</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_1">In its current incarnation, no user information is collected whatsoever. The vast majority of permissions are used by components and the application itself does not utilise any of the data provided by these components.</string>
    <string name="title_activity_activity_tutorial">ActivityTutorial</string>
    <string name="hello_world">Hello world!</string>
    <string name="disclaimer_tutorial">Disclaimer \u0026 Tutorial</string>
    <string name="tutorial_1_0">Composites</string>
    <string name="tutorial_1_1">appGlue lets you make your own mini apps by combining components.</string>
    <string name="tutorial_1_2">These mini apps are called composites and look like this:</string>
</resources>