<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin_half"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:text="@string/privacy_disclaimer_title"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/p"
            android:text="@string/privacy_disclaimer_1"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/p"
            android:text="@string/privacy_disclaimer_2"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/p"
            android:text="@string/privacy_disclaimer_tc"
            android:layout_marginBottom="10dip"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/ul_li"
            android:text="@string/privacy_disclaimer_tc1"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/ul_li"
            android:text="@string/privacy_disclaimer_tc2"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/ul_li"
            android:text="@string/privacy_disclaimer_tc3"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/ul_li"
            android:text="@string/privacy_disclaimer_tc4"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/p"
            android:text="@string/privacy_disclaimer_3"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/p"
            android:text="@string/privacy_disclaimer_3"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:text="@string/privacy_title"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/p"
            android:text="@string/privacy_1"
            />

    </LinearLayout>
</ScrollView>