<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Fill.Scroll" 
    android:id="@+id/fragment_save">
    
    <LinearLayout
    	android:orientation="vertical" 
    	style="@style/Fill">

     <TextView
         style="@style/FillWrap"
         android:text="@string/save_name"
         />
     
     <EditText
         android:id="@+id/save_name"
         style="@style/FillWrap"
         android:inputType="text"
         android:hint="@string/save_name_default"
         />
     
     <TextView
         style="@style/FillWrap"
         android:text="@string/save_description"
         />
     
     <EditText
         android:id="@+id/save_description"
         style="@style/FillWrap"
         android:inputType="text"
         android:hint="@string/save_description_default"
         />
     
     <!-- <TextView
         style="@style/FillWrap"
         android:text="@string/save_list"
         />
     
     <ListView
         android:id="@+id/save_list"
         style="@style/FillWrap"
         />-->
        
	</LinearLayout>
</ScrollView>