<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_service_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/component_icon"
            android:contentDescription="@string/component_icon_contdesc"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_margin="4dip"
            android:src="@drawable/icon"
            android:paddingBottom="5dip" />

        <TextView
            android:id="@+id/component_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_name"
            android:paddingTop="10dip"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        style="@style/Simple.Title"
        android:text="@string/simple_title_description"></TextView>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/simple_service_description_text" />

    <TextView
        android:id="@+id/simple_title_App"
        style="@style/Simple.Title"
        android:text="@string/simple_title_app" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dip"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/component_app_icon"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:gravity="center"
                android:contentDescription="@string/cd_simple_icon"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/component_app_name"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/component_dev"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/dev_name"
                android:textColor="@color/dim_text"
                android:paddingLeft="5dip"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_button"
                android:id="@+id/component_view_app"
                android:minHeight="48dip"
                android:gravity="center"
                android:text="@string/view_app"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/dim_text"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" />

            <!--  Then we need a bar in the middle? -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_button"
                android:minHeight="48dip"
                android:id="@+id/component_launch_app"
                android:text="@string/launch_app"
                android:gravity="center"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/Simple.Title"
        android:text="@string/examples" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_examples"
        android:id="@+id/eg_none"
        android:textColor="@color/dimmer_text"
        android:layout_margin="5dip"
        android:gravity="center"
        android:visibility="gone" />

    <HorizontalScrollView
        android:id="@+id/scroll_eg_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/component_eg_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dip">

        <TextView
            style="@style/Simple.Title"
            android:text="@string/simple_title_inputs"></TextView>

        <LinearLayout
            style="@style/FillWrap.Horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/inputs" />

                <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_list" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/no_inputs"
                    android:text="@string/no_inputs"
                    android:visibility="gone"
                    android:textColor="@color/dimmer_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/outputs" />

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/output_list" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/no_outputs"
                    android:id="@+id/no_outputs"
                    android:textColor="@color/dimmer_text" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>