<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/single_service_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/context_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/colorAccent">

        <ImageButton
            android:id="@+id/composite_run"
            style="@style/SelectableItem"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_action_play"
            android:clickable="true"
            android:contentDescription="@string/run"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/composite_schedule"
            style="@style/SelectableItem"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_action_time"
            android:clickable="true"
            android:contentDescription="@string/schedule"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/composite_edit"
            style="@style/SelectableItem"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_action_edit"
            android:clickable="true"
            android:contentDescription="@string/edit"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/composite_shortcut"
            style="@style/SelectableItem"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_action_pin"
            android:clickable="true"
            android:contentDescription="@string/create_shortcut"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/composite_delete"
            style="@style/SelectableItem"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_action_discard"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:layout_gravity="center" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/name_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/composite_icon"
            android:contentDescription="@string/component_icon_contdesc"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_margin="4dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/icon"
            android:paddingBottom="5dip"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/enabled_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:id="@+id/composite_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/composite_icon"
            android:layout_toEndOf="@id/composite_icon"
            android:layout_toLeftOf="@id/enabled_switch"
            android:layout_toStartOf="@id/enabled_switch"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/name_edit_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <ImageButton
            android:id="@+id/composite_edit_icon"
            android:contentDescription="@string/component_icon_contdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:src="@drawable/icon"
            android:paddingBottom="5dip"
            />

        <EditText
            android:id="@+id/composite_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_name"
            android:paddingTop="10dip"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <TextView
        style="@style/Simple.Title"
        android:text="@string/simple_title_description" />

    <TextView
        android:id="@+id/composite_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        />

    <EditText
        android:id="@+id/composite_edit_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        style="@style/Simple.Title"
        android:text="@string/status" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/composite_running"
            android:text="@string/running"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        style="@style/Simple.Title"
        android:text="@string/components"
        android:layout_marginBottom="5dip" />

    <ListView
        android:id="@+id/composite_component_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>